Added description to Admin and End user guides
Signed-off-by: swkarmar <swkarmar@redhat.com>

--- a/modules/administration-guide/pages/configuring-namespace-provisioning.adoc
+++ b/modules/administration-guide/pages/configuring-namespace-provisioning.adoc
@@ -1,5 +1,6 @@
 :_content-type: CONCEPT
 :navtitle: Configuring {orch-namespace}s
+:description: Configuring user {orch-namespace} provisioning
 :keywords: administration guide, configuring, namespace
 :page-aliases: installation-guide:configuring-namespace-strategies, configuring-namespace-strategies
 
