--- a/modules/administration-guide/pages/configuring-networking.adoc
+++ b/modules/administration-guide/pages/configuring-networking.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Configuring networking
+:description: Configuring networking
 :keywords: administration-guide, configuring, networking
 :page-aliases: 
 
