--- a/modules/administration-guide/pages/configuring-server-components.adoc
+++ b/modules/administration-guide/pages/configuring-server-components.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Configuring server components
+:description: Configuring server components
 :keywords: administration-guide, configuring, server components
 :page-aliases: 
 
