--- a/modules/administration-guide/pages/configuring-server-logging.adoc
+++ b/modules/administration-guide/pages/configuring-server-logging.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Configuring server logging
+:description: Configuring server logging
 :keywords: administration-guide, configuring-server-logging
 :page-aliases: .:configuring-server-logging
 
