--- a/modules/administration-guide/pages/configuring-storage.adoc
+++ b/modules/administration-guide/pages/configuring-storage.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Configuring storage
+:description: Configuring storage
 :keywords: administration-guide, configuring, storage
 :page-aliases: 
 
