--- a/modules/administration-guide/pages/configuring-the-number-of-workspaces-that-a-user-can-create.adoc
+++ b/modules/administration-guide/pages/configuring-the-number-of-workspaces-that-a-user-can-create.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Configuring the number of workspaces that a user can create
+:description: Configuring the number of workspaces that a user can create
 :keywords: administration guide, number, workspaces
 :page-aliases: installation-guide:configuring-the-number-of-workspaces-that-a-user-can-create
 
