--- a/modules/administration-guide/pages/configuring-workspace-target-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-workspace-target-namespace.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Configuring {orch-namespace} name
+:description: Configuring a user {orch-namespace} name for automatic provisioning
 :keywords: administration guide, configuring, namespace
 :page-aliases: 
 
