--- a/modules/administration-guide/pages/configuring-workspaces-globally.adoc
+++ b/modules/administration-guide/pages/configuring-workspaces-globally.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Configuring workspaces globally
+:description: Configuring workspaces globally
 :keywords: administration-guide, configuring, workspaces
 :page-aliases: 
 
