--- a/modules/administration-guide/pages/creating-a-telemetry-plugin.adoc
+++ b/modules/administration-guide/pages/creating-a-telemetry-plugin.adoc
@@ -2,6 +2,7 @@
 // = Creating a telemetry plugin
 :_content-type: REFERENCE
 :navtitle: Creating a telemetry plug-in
+:description: Configuring a telemetry plug-in
 :keywords: extensions, telemetry
 :page-aliases: extensions:creating-a-telemetry-plug-in
 
