--- a/modules/administration-guide/pages/dashboard.adoc
+++ b/modules/administration-guide/pages/dashboard.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: User dashboard
+:description: User dashboard
 :keywords: administration-guide, architecture, server, devworkspace, user, dashboard
 :page-aliases: 
 
