--- a/modules/administration-guide/pages/devfile-registries.adoc
+++ b/modules/administration-guide/pages/devfile-registries.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Devfile registries
+:description: Devfile registries
 :keywords: administration-guide, architecture, server, devworkspace, devfile, registry
 :page-aliases: 
 
