--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: {devworkspace} operator
+:description: {devworkspace} operator
 :keywords: administration-guide, workspace operator, devworkspace
 :page-aliases: .:devworkspace-operator
 
