--- a/modules/administration-guide/pages/gateway.adoc
+++ b/modules/administration-guide/pages/gateway.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Gateway
+:description: Gateway
 :keywords: administration-guide, architecture, server, devworkspace, gateway
 :page-aliases: 
 
