--- a/modules/administration-guide/pages/importing-untrusted-tls-certificates.adoc
+++ b/modules/administration-guide/pages/importing-untrusted-tls-certificates.adoc
@@ -1,5 +1,6 @@
 :_content-type: CONCEPT
 :navtitle: Importing untrusted TLS certificates to {prod-short}
+:description: Importing untrusted TLS certificates to {prod-short}
 :keywords: administration guide, tls, certificate
 :page-aliases: installation-guide:importing-untrusted-tls-certificates, installation-guide:importing-untrusted-tls-certificates-old
 
