--- a/modules/administration-guide/pages/installing-che-on-codeready-containers.adoc
+++ b/modules/administration-guide/pages/installing-che-on-codeready-containers.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Installing {prod-short} on CodeReady Containers
+:description: Installing {prod-short} on CodeReady Containers
 :keywords: overview, installing-che-on-codeready-containers
 :page-aliases: installation-guide:installing-che-on-codeready-containers, overview:installing-che-on-codeready-containers
 
