--- a/modules/administration-guide/pages/installing-che-using-storage-classes.adoc
+++ b/modules/administration-guide/pages/installing-che-using-storage-classes.adoc
@@ -1,5 +1,6 @@
 :_content-type: CONCEPT
 :navtitle: Installing {prod-short} using storage classes
+:description: Installing {prod-short} using storage classes
 :keywords: administration guide, installing-che-using-storage-classes
 :page-aliases: installation-guide:installing-che-using-storage-classes
 
