--- a/modules/administration-guide/pages/installing-image-puller-on-openshift-using-openshift-templates.adoc
+++ b/modules/administration-guide/pages/installing-image-puller-on-openshift-using-openshift-templates.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Installing using OpenShift templates
+:description: Installing using OpenShift templates
 :keywords: administration-guide, image-puller, openshift, openshift-templates, CLI
 :page-aliases: .:installing-image-puller-on-openshift-using-openshift-templates
 
