--- a/modules/administration-guide/pages/installing-image-puller-on-openshift-using-operatorhub.adoc
+++ b/modules/administration-guide/pages/installing-image-puller-on-openshift-using-operatorhub.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Installing using OperatorHub
+:description: Installing using OperatorHub
 :keywords: administration-guide, image-puller, openshift, operator, operatorhub
 :page-aliases: .:installing-image-puller-on-openshift-using-operatorhub
 
