--- a/modules/administration-guide/pages/installing-prometheus-and-grafana.adoc
+++ b/modules/administration-guide/pages/installing-prometheus-and-grafana.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Installing Prometheus and Grafana
+:description: Installing Prometheus and Grafana
 :keywords: prometheus, grafana
 //:page-aliases:
 
