--- a/modules/administration-guide/pages/monitoring-che.adoc
+++ b/modules/administration-guide/pages/monitoring-che.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Monitoring {prod-short} Server
+:description: Monitoring {prod-short} Server
 :keywords: administration-guide, monitoring-che
 :page-aliases: .:monitoring-che, .:tracing-che, tracing-che
 
