--- a/modules/administration-guide/pages/plug-in-registry.adoc
+++ b/modules/administration-guide/pages/plug-in-registry.adoc
@@ -1,5 +1,6 @@
 :_content-type: CONCEPT
 :navtitle: Plug-in registry
+:description: Plug-in registry
 :keywords: administration-guide, architecture, server, devworkspace, plug-in, registry
 :page-aliases: 
 
