--- a/modules/administration-guide/pages/postgresql.adoc
+++ b/modules/administration-guide/pages/postgresql.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: PostgreSQL
+:description: PostgreSQL
 :keywords: administration-guide, architecture, server, devworkspace, postgresql, database
 :page-aliases: 
 
