--- a/modules/administration-guide/pages/preparing-a-restricted-environment.adoc
+++ b/modules/administration-guide/pages/preparing-a-restricted-environment.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Preparing a restricted environment
+:description: Preparing a restricted environment
 :keywords: preparing, restricted environment
 :page-aliases: 
 
