--- a/modules/administration-guide/pages/preparing-the-installation.adoc
+++ b/modules/administration-guide/pages/preparing-the-installation.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Preparing the installation
+:description: Preparing the installation
 :keywords: preparing, installation
 :page-aliases: 
 
