--- a/modules/administration-guide/pages/provisioning-namespaces-in-advance.adoc
+++ b/modules/administration-guide/pages/provisioning-namespaces-in-advance.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Provisioning {orch-namespace}s in advance
+:description: Provisioning {orch-namespace}s in advance
 :keywords: administration guide, provisioning, {orch-namespace}
 :page-aliases: 
 
