--- a/modules/administration-guide/pages/removing-user-data.adoc
+++ b/modules/administration-guide/pages/removing-user-data.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Removing user data
+:description: Removing user data
 :keywords: administration-guide, removing-user-data
 :page-aliases: .:removing-user-data
 
