--- a/modules/administration-guide/pages/server-components.adoc
+++ b/modules/administration-guide/pages/server-components.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Server components
+:description: Server components
 :keywords: administration-guide, architecture, server, devworkspace
 :page-aliases:  
 
