--- a/modules/administration-guide/pages/supported-platforms.adoc
+++ b/modules/administration-guide/pages/supported-platforms.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Supported platforms
+:description: Supported platforms
 :keywords: administration guide, supported-platforms
 :page-aliases: installation-guide:supported-platforms
 
