--- a/modules/administration-guide/pages/understanding-the-checluster-custom-resource.adoc
+++ b/modules/administration-guide/pages/understanding-the-checluster-custom-resource.adoc
@@ -1,5 +1,6 @@
 :_content-type: CONCEPT
 :navtitle: Understanding the `CheCluster` Custom Resource
+:description: Understanding the `CheCluster` Custom Resource
 :keywords: administration guide, understanding-the-checluster-custom-resource, configuring-che
 :page-aliases: installation-guide:understanding-the-checluster-custom-resource, installation-guide:configuring-the-che-installation
 
