--- a/modules/administration-guide/pages/uninstalling-che-by-using-chectl.adoc
+++ b/modules/administration-guide/pages/uninstalling-che-by-using-chectl.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Uninstalling {prod-short} by using {prod-cli}
+:description: Uninstalling {prod-short} by using {prod-cli}
 :keywords: administration guide, uninstalling-che, uninstalling-che-after-chectl-installation
 :page-aliases: installation-guide:uninstalling-che-after-chectl-installation
 
