--- a/modules/administration-guide/pages/uninstalling-che-on-openshift.adoc
+++ b/modules/administration-guide/pages/uninstalling-che-on-openshift.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Uninstalling {prod-short} on OpenShift
+:description: Uninstalling {prod-short} on OpenShift
 :keywords: administration guide, uninstalling-che, uninstalling-che-after-operatorhub-installation
 :page-aliases: installation-guide:uninstalling-che-after-operatorhub-installation
 
