--- a/modules/administration-guide/pages/uninstalling-che.adoc
+++ b/modules/administration-guide/pages/uninstalling-che.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Uninstalling Che
+:description: Uninstalling Che
 :keywords: administration guide, uninstalling-che
 :page-aliases: installation-guide:uninstalling-che
 
