--- a/modules/administration-guide/pages/upgrading-che-using-operatorhub.adoc
+++ b/modules/administration-guide/pages/upgrading-che-using-operatorhub.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Upgrading {prod-short} using OperatorHub
+:description: Upgrading {prod-short} using OperatorHub
 :keywords: administration guide, upgrading-che-using-operatorhub
 :page-aliases: installation-guide:upgrading-che-using-operatorhub
 
