--- a/modules/administration-guide/pages/user-workspaces.adoc
+++ b/modules/administration-guide/pages/user-workspaces.adoc
@@ -1,5 +1,6 @@
 :_content-type: REFERENCE
 :navtitle: User workspaces
+:description: User workspaces
 :keywords: administration-guide, architecture, workspace, devworkspace
 :page-aliases: 
 
