--- a/modules/administration-guide/pages/using-the-openshift-web-console-to-configure-the-checluster-custom-resource.adoc
+++ b/modules/administration-guide/pages/using-the-openshift-web-console-to-configure-the-checluster-custom-resource.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Using the OpenShift web console to configure the `CheCluster` Custom Resource
+:description: Using the OpenShift web console to configure the `CheCluster` Custom Resource
 :keywords: administration guide
 :page-aliases: installation-guide:using-the-openshift-web-console-to-configure-the-checluster-custom-resource
 
