--- a/modules/end-user-guide/pages/adding-a-vscode-extension.adoc
+++ b/modules/end-user-guide/pages/adding-a-vscode-extension.adoc
@@ -1,4 +1,5 @@
 :navtitle: Adding a Visual Studio Code extension to a workspace
+:description: Adding a Visual Studio Code extension to a workspace
 :keywords: Visual Studio Code extension, user-guide
 
 [id="adding-visual-studio-code-extension_{context}"]
