--- a/modules/end-user-guide/pages/automatic-token-injection.adoc
+++ b/modules/end-user-guide/pages/automatic-token-injection.adoc
@@ -1,4 +1,5 @@
 :navtitle: Automatic {orch-name} token injection
+:description: Automatic {orch-name} token injection
 :keywords: user-guide, token, injection
 :page-aliases: .:automatic-token-injection, overview:automatic-token-injection
 
