--- a/modules/end-user-guide/pages/first-time-contributors.adoc
+++ b/modules/end-user-guide/pages/first-time-contributors.adoc
@@ -1,4 +1,5 @@
 :navtitle: Badge for first-time contributors
+:description: Badge for first-time contributors
 :keywords: user-guide, first-time contributor
 :page-aliases: 
 
