--- a/modules/end-user-guide/pages/git-credential-store.adoc
+++ b/modules/end-user-guide/pages/git-credential-store.adoc
@@ -1,4 +1,5 @@
 :navtitle: Creating a {orch-name} Secret for a Git credentials store
+:description: Creating a {orch-name} Secret for a Git credentials store
 :keywords: user-guide, configuring, user, secrets
 :page-aliases: 
 
