--- a/modules/end-user-guide/pages/integrating-with-kubernetes.adoc
+++ b/modules/end-user-guide/pages/integrating-with-kubernetes.adoc
@@ -1,4 +1,5 @@
 :navtitle: Integrating with {orch-name}
+:description: Integrating with {orch-name}
 :keywords: overview, integrating with {orch-name}
 :page-aliases: 
 
