--- a/modules/end-user-guide/pages/navigating-openshift-web-console-from-che.adoc
+++ b/modules/end-user-guide/pages/navigating-openshift-web-console-from-che.adoc
@@ -1,4 +1,5 @@
 :navtitle: Navigating OpenShift web console from {prod-short}
+:description: Navigating OpenShift web console from {prod-short}
 :keywords: overview, OpenShift, web console
 :page-aliases: .:accessing-openshift-web-console-from-che, overview:accessing-openshift-web-console-from-che, accessing-openshift-web-console-from-che
 
