--- a/modules/end-user-guide/pages/secret-as-a-file.adoc
+++ b/modules/end-user-guide/pages/secret-as-a-file.adoc
@@ -1,4 +1,5 @@
 :navtitle: Secret as a file
+:description: How to mount a secret from the user's {orch-namespace}
 :keywords: user-guide, configuring, user, secrets
 :page-aliases: 
 
