--- a/modules/end-user-guide/pages/secret-as-a-variable.adoc
+++ b/modules/end-user-guide/pages/secret-as-a-variable.adoc
@@ -1,4 +1,5 @@
 :navtitle: Secret as environment variable
+:description: How to mount a {platforms-name} secret from the user’s {orch-namespace} as an environment variable
 :keywords: user-guide, configuring, user, secrets
 :page-aliases: 
 
