--- a/modules/end-user-guide/pages/troubleshooting-che.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-che.adoc
@@ -1,4 +1,5 @@
 :navtitle: Troubleshooting Che
+:description: Troubleshooting Che
 :keywords: user-guide, troubleshooting-che
 :page-aliases: .:troubleshooting-che
 
