--- a/modules/end-user-guide/pages/troubleshooting-network-problems.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-network-problems.adoc
@@ -1,4 +1,5 @@
 :navtitle: Troubleshooting network problems
+:description: Troubleshooting network problems
 :keywords: user-guide, troubleshooting-network-problems
 :page-aliases: .:troubleshooting-network-problems
 
