--- a/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
@@ -1,4 +1,5 @@
 :navtitle: Troubleshooting slow workspaces
+:description: Troubleshooting slow workspaces
 :keywords: user-guide, troubleshooting-slow-workspaces
 :page-aliases: .:troubleshooting-slow-workspaces
 
