--- a/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
@@ -1,4 +1,5 @@
 :navtitle: Viewing {prod-short} workspaces logs
+:description: Viewing {prod-short} workspaces logs
 :keywords: administration-guide, viewing-che-workspaces-logs
 :page-aliases: .:viewing-che-workspaces-logs, administration-guide:viewing-che-workspaces-logs
 
