--- a/modules/administration-guide/pages/configuring-observability.adoc
+++ b/modules/administration-guide/pages/configuring-observability.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Configuring observability
+:description: Configuring observability
 :keywords: administration-guide, configuring, observability, logs, monitoring
 :page-aliases: .:retrieving-che-logs, .:viewing-kubernetes-events, viewing-kubernetes-events, .:viewing-plug-in-broker-logs, viewing-plug-in-broker-logs, retrieving-che-logs, viewing-che-server-logs, viewing-external-service-logs, 
 
