--- a/modules/administration-guide/pages/configuring-routes.adoc
+++ b/modules/administration-guide/pages/configuring-routes.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Configuring OpenShift Route
+:description: Configuring OpenShift Route to work with Router Sharding
 :keywords: administration guide, configuring, routes
 :page-aliases: installation-guide:configuring-routes
 
