--- a/modules/administration-guide/pages/configuring-workspaces-nodeselector.adoc
+++ b/modules/administration-guide/pages/configuring-workspaces-nodeselector.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Configuring workspaces nodeSelector
+:description: Configuring workspaces nodeSelector for Pods of {prod-short} workspaces
 :keywords: administration guide, configuring-workspaces-nodeselector
 :page-aliases: installation-guide:configuring-workspaces-nodeselector
 
