--- a/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
+++ b/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Installing {prod-short} in restricted environment
+:description: Installing {prod-short} in restricted environment
 :keywords: administration guide, installing-che-in-a-restricted-environment, installing-che-in-restricted-environment
 :page-aliases: installation-guide:installing-che-in-restricted-environment, installation-guide:installing-che-in-a-restricted-environment
 
