--- a/modules/administration-guide/pages/installing-che-on-minikube.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Installing {prod-short} on Minikube
+:description: Installing {prod-short} on Minikube
 :keywords: overview, installing-che-on-minikube
 :page-aliases: installation-guide:installing-che-on-minikube, overview:installing-che-on-minikube
 
