--- a/modules/administration-guide/pages/monitoring-with-prometheus-and-grafana.adoc
+++ b/modules/administration-guide/pages/monitoring-with-prometheus-and-grafana.adoc
@@ -1,4 +1,5 @@
 :navtitle: Monitoring with Prometheus and Grafana
+:description: Monitoring with Prometheus and Grafana
 :keywords: administration-guide, monitoring-with-prometheus-and-grafana
 :page-aliases: .:monitoring-with-prometheus-and-grafana
 
