--- a/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool.adoc
+++ b/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Upgrading {prod-short} using the CLI management tool
+:description: Upgrading {prod-short} using the CLI management tool
 :keywords: administration guide, upgrading-che-using-the-cli-management-tool
 :page-aliases: installation-guide:upgrading-che-using-the-cli-management-tool
 
