--- a/modules/administration-guide/pages/using-the-chectl-management-tool.adoc
+++ b/modules/administration-guide/pages/using-the-chectl-management-tool.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Using the chectl management tool
+:description: Using the chectl management tool
 :keywords: overview, using-the-chectl-management-tool
 :page-aliases: installation-guide:using-the-chectl-management-tool, overview:using-the-chectl-management-tool
 
