--- a/modules/end-user-guide/pages/configuring-user-preferences-and-secrets.adoc
+++ b/modules/end-user-guide/pages/configuring-user-preferences-and-secrets.adoc
@@ -1,4 +1,5 @@
 :navtitle: Configuring user preferences and secrets
+:description: Configuring user preferences and secrets
 :keywords: user-guide, configuring, user, preferences, secrets
 :page-aliases: 
 
