--- a/modules/end-user-guide/pages/investigating-failures-at-a-workspace-start-using-the-verbose-mode.adoc
+++ b/modules/end-user-guide/pages/investigating-failures-at-a-workspace-start-using-the-verbose-mode.adoc
@@ -1,4 +1,5 @@
 :navtitle: Troubleshooting workspace start failures
+:description: Troubleshooting workspace start failures
 :keywords: user-guide, investigating-failures-at-a-workspace-start-using-the-verbose-mode
 :page-aliases: .:investigating-failures-at-a-workspace-start-using-the-verbose-mode, .:starting-a-che-workspace-in-debug-mode, starting-a-che-workspace-in-debug-mode, .:restarting-a-che-workspace-in-debug-mode-after-start-failure, restarting-a-che-workspace-in-debug-mode-after-start-failure
 
