--- a/modules/end-user-guide/pages/navigating-che-from-openshift-developer-perspective.adoc
+++ b/modules/end-user-guide/pages/navigating-che-from-openshift-developer-perspective.adoc
@@ -1,4 +1,5 @@
 :navtitle: Navigating {prod-short} from OpenShift Developer Perspective
+:description: Navigating {prod-short} from OpenShift Developer Perspective
 :keywords: overview, accessing-che-from-openshift-developer-perspective
 :page-aliases: .:accessing-che-from-openshift-developer-perspective, overview:accessing-che-from-openshift-developer-perspective, accessing-che-from-openshift-developer-perspective
 
