docs: apply suggestions: simpleifu uninstalling che procedure

--- a/modules/administration-guide/examples/snip_che-note-uninstalling-in-minikube-cluster.adoc
+++ b/modules/administration-guide/examples/snip_che-note-uninstalling-in-minikube-cluster.adoc
@@ -1,6 +1,6 @@
-[NOTE]
-====
-If uninstalling {prod-short} from a Minikube cluster, remove the `dex` and Che namespaces.
-
-`$ {orch-cli} delete namespaces dex __<{orch-namespace}>__`
-====
+. When uninstalling {prod-short} from a Minikube cluster, remove the `dex` and __<{prod-namespace}>__ {orch-namespace}.
++
+[subs="+attributes,quotes"]
+----
+$ {orch-cli} delete namespaces dex __<{prod-namespace}>__
+----
