fix: Migration from tech-preview-channel
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
@@ -23,6 +23,7 @@ The workspace engine and authentication system used until {prod-prev-short} vers
 [source,bash,subs="+attributes"]
 ----
 export INSTALLATION_NAMESPACE={prod-namespace} #<1>
+export OPERATOR_NAMESPACE={prod-namespace}     #<1>
 export PRODUCT_ID={prod-id}
 export PRODUCT_DEPLOYMENT_NAME={prod-deployment}
 export PRODUCT_OPERATOR_NAME={prod-operator}
