procedure: add a stripped down procedure: Installing on OpenShift using the web console as requested during Cabal meeting

--- a/modules/administration-guide/pages/installing-che-on-openshift.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift.adoc
@@ -1,42 +1,9 @@
 :_content-type: PROCEDURE
 :navtitle: Installing {prod-short} on OpenShift
 :keywords: overview, installing-che-on-openshift-4-using-cli
-:page-aliases: installation-guide:installing-che-on-openshift-4-using-cli, overview:installing-che-on-openshift-4-using-cli, installation-guide:installing-che-on-openshift-4-using-operatorhub, overview:installing-che-on-openshift-4-using-operatorhub, creating-an-instance-of-the-che-operator, installing-che-on-openshift-4-using-operatorhub, installing-che-on-openshift-4-using-cli
+:page-aliases:
 
 [id="installing-{prod-id-short}-on-openshift_{context}"]
 = Installing {prod-short} on OpenShift
 
 You can install {prod-short} on OpenShift.
-
-.Prerequisites
-
-* An active `oc` session with administrative permissions to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
-
-* `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
-
-.Procedure
-
-
-* Create the {prod-short} instance:
-+
-[subs="+attributes,+quotes"]
-----
-$ {prod-cli} server:deploy --platform openshift
-----
-
-.Verification steps
-
-. Verify the {prod-short} instance status:
-+
-[subs="+attributes,+quotes"]
-----
-$ {prod-cli} server:status
-----
-
-. Navigate to the {prod-short} cluster instance:
-+
-[subs="+attributes,+quotes"]
-----
-$ {prod-cli} dashboard:open
-----
-
