--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -16,11 +16,13 @@
 ** xref:calculating-che-resource-requirements.adoc[]
 * xref:installing-che.adoc[]
 ** xref:installing-the-chectl-management-tool.adoc[]
-** xref:installing-che-on-openshift.adoc[]
+// ** xref:installing-che-on-openshift.adoc[]
+** xref:installing-che-on-openshift-using-cli.adoc[]
+** xref:installing-che-on-openshift-using-the-web-console.adoc[]
+** xref:installing-che-in-a-restricted-environment.adoc[]
 ** xref:installing-che-locally.adoc[]
 *** xref:installing-che-on-codeready-containers.adoc[]
 *** xref:installing-che-on-minikube.adoc[]
-** xref:installing-che-in-a-restricted-environment.adoc[]
 * xref:configuring-che.adoc[]
 ** xref:understanding-the-checluster-custom-resource.adoc[]
 *** xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
