--- a/modules/administration-guide/pages/using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc
+++ b/modules/administration-guide/pages/using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc
@@ -10,8 +10,10 @@ To deploy {prod-short} with a suitable configuration, edit the `CheCluster` Cust
 
 
 .Prerequisites
-* Access to an administrator account on an instance of {platforms-name}.
-* The {prod-cli} tool is available. See xref:installing-the-chectl-management-tool.adoc[]. 
+
+* An active `oc` session with administrative permissions to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
+
+* `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
 
 .Procedure
 * Create a `che-operator-cr-patch.yaml` YAML file that contains the subset of the `CheCluster` Custom Resource to configure:
