--- a/modules/administration-guide/pages/provisioning-namespaces-in-advance.adoc
+++ b/modules/administration-guide/pages/provisioning-namespaces-in-advance.adoc
@@ -6,7 +6,7 @@
 [id="preprovisioning-{orch-namespace}s_{context}"]
 = Provisioning {orch-namespace}s in advance
 
-You can provision workpaces {orch-namespace}s in advance, rather than relying on automatic provisioning. Repeat the procedure for each user.
+You can provision workspaces {orch-namespace}s in advance, rather than relying on automatic provisioning. Repeat the procedure for each user.
 
 .Procedure
 
