--- a/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool.adoc
+++ b/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool.adoc
@@ -14,8 +14,7 @@ This section describes how to upgrade from the previous minor version using the 
 
 * A running instance of a previous minor version of {prod-prev-short}, installed using the CLI management tool on the same instance of {platforms-name}, in the `__<{prod-namespace}>__` project.
 
-* `{prod-cli}` is available and updated. See xref:using-the-chectl-management-tool.adoc[].
-
+* `{prod-cli}` for {prod-short} version {prod-ver}. See: xref:installing-the-chectl-management-tool.adoc[].
 
 .Procedure
 
