--- a/modules/administration-guide/examples/snip_che-upgrading-the-chectl-management-tool.adoc
+++ b/modules/administration-guide/examples/snip_che-upgrading-the-chectl-management-tool.adoc
@@ -1,15 +1,8 @@
-// Module included in the following assemblies:
-//
-// installing-the-{prod-cli}-management-tool
-
-[id="upgrading-the-{prod-cli}-management-tool_{context}"]
-= Upgrading the {prod-cli} management tool
-
 This section describes how to upgrade the `{prod-cli}` management tool.
 
 .Prerequisites
 
-*  The `{prod-cli}` tool is available. See: xref:using-the-chectl-management-tool.adoc[]
+* `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
 
 .Procedure
 
@@ -36,3 +29,7 @@ To move to a different channel, invoke the update with the name of the channel a
 # {prod-cli} update [next|stable]
 ----
 ====
+
+.Additional resources
+
+* {link-prod-cli-documentation}
