--- a/modules/administration-guide/pages/configuring-routes.adoc
+++ b/modules/administration-guide/pages/configuring-routes.adoc
@@ -6,20 +6,17 @@
 [id="configuring-routes_{context}"]
 = Configuring OpenShift Route to work with Router Sharding
 
-This procedure describes how to configure labels, annotations, and domains for OpenShift Route to work with link:https://docs.openshift.com/container-platform/4.7/networking/ingress-operator.html#nw-ingress-sharding_configuring-ingress[Router Sharding]. The chapter then mentions the configuration process for existing instances or those about to be installed.
+You can configure labels, annotations, and domains for OpenShift Route to work with link:https://docs.openshift.com/container-platform/4.7/networking/ingress-operator.html#nw-ingress-sharding_configuring-ingress[Router Sharding].
 
 .Prerequisites
 
-* The `oc` and `{prod-cli}` tool is available.
+* An active `oc` session with administrative permissions to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
+
+* `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
 
 .Procedure
 
-* For a new OperatorHub installation:
-+
-. Enter the {prod-short} Cluster using {ocp} and create CheCluster Custom Resource (CR). See, xref:using-the-openshift-web-console-to-configure-the-checluster-custom-resource.adoc[]
-
-+
-. Set the following values in {prod-checluster} Custom Resource (CR):
+* Configure the `CheCluster` custom resource:
 +
 [source,yaml,subs="+quotes"]
 ----
@@ -35,84 +32,13 @@ spec:
       CHE_INFRA_OPENSHIFT_ROUTE_LABELS: <labels> <1>
       CHE_INFRA_OPENSHIFT_ROUTE_HOST_DOMAIN__SUFFIX: <domain> <2>
 ----
-<1> comma separated list of labels that are used by the target ingress controller to filter the set of Routes to service
-<2> DNS name serviced by the target ingress controller
-<3> unstructured key value map stored with a resource
+<1> A comma-separated list of labels that the target ingress controller uses to filter the set of Routes to service.
+<2> The DNS name serviced by the target ingress controller.
+<3> An unstructured key value map stored with a resource.```
 
-* For a  new `{prod-cli}` installation:
-+
-. Configure the installation using:
-+
-[subs="+quotes,+attributes"]
-----
-$ {prod-cli} server:deploy --che-operator-cr-patch-yaml=patch.yaml ...
-----
-+
-The `patch.yaml` file must contain the following:
-+
-[source,yaml,subs="+quotes"]
-----
-spec:
-  server:
-    cheServerRoute:
-      labels: <labels> <1>
-      domain: <domain> <2>
-      annotations:     <3>
-        key1: value1
-        key2: value2
-    customCheProperties:
-      CHE_INFRA_OPENSHIFT_ROUTE_LABELS: <labels> <1>
-      CHE_INFRA_OPENSHIFT_ROUTE_HOST_DOMAIN__SUFFIX: <domain> <2>
-----
-<1> comma separated list of labels that are used by the target ingress controller to filter the set of Routes to service
-<2> DNS name serviced by the target ingress controller
-<3> unstructured key value map stored with a resource
 
-* For already existing {prod-short} installation:
-+
-. Update `{prod-checluster}` CR using the `{orch-cli}` tool:
-+
-.. To configure labels:
-+
-IMPORTANT: Use comma to separate labels: `key1=value1,key2=value2`
-+
-[subs="+quotes,+attributes"]
-----
-$ {orch-cli} patch checluster/{prod-checluster} -n {prod-namespace} --type=json -p \
-'[{"op": "replace", "path": "/spec/server/cheServerRoute/labels",'\
-'"value": "__<labels for a {prod-id-short} server route>__"}]'
-----
-+
-[subs="+quotes,+attributes"]
-----
-$ {orch-cli} patch checluster/{prod-checluster} -n {prod-namespace} --type=json -p \
-'[{"op": "replace", "path": "/spec/server/customCheProperties/CHE_INFRA_OPENSHIFT_ROUTE_LABELS", '\
-'"value": "__<labels for a workspace routes>__"}]'
-----
-+
-.. To configure domains:
-+
-[subs="+quotes,+attributes"]
-----
-$ {orch-cli} patch checluster/{prod-checluster} -n {prod-namespace} --type=json -p \
-'[{"op": "replace", "path": "/spec/server/cheServerRoute/domain",'\
-'"value": "__<ingress domain>__"}]'
-----
-+
-[subs="+quotes,+attributes"]
-----
-$ {orch-cli} patch checluster/{prod-checluster} -n {prod-namespace} --type=json -p \
-'[{"op": "replace", "path": "/spec/server/customCheProperties/CHE_INFRA_OPENSHIFT_ROUTE_HOST_DOMAIN______SUFFIX", '\
-'"value": "__<ingress domain>__"}]'
-----
-+
-.. To configure annotations:
-+
-IMPORTANT: Use object to specify annotations: `{"key1": "value1", "key2" : "value2"}`
-+
-[subs="+quotes,+attributes"]
-----
-$ {orch-cli} patch checluster/{prod-checluster} -n {prod-namespace} --type=json -p \
-'[{"op": "replace", "path": "/spec/server/cheServerRoute/annotations",'\
-'"value": __<annotations for a {prod-id-short} ingress>__}]'
-----
+.Additional resources
+
+* xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
+
+* xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
