--- a/modules/administration-guide/pages/provisioning-namespaces-in-advance.adoc
+++ b/modules/administration-guide/pages/provisioning-namespaces-in-advance.adoc
@@ -6,7 +6,7 @@
 [id="preprovisioning-{orch-namespace}s_{context}"]
 = Provisioning {orch-namespace}s in advance
 
-You can provision workpaces {orch-namespace}s in advance, rather than relying on automatic provisioning. Repeat the procedure for each user.
+You can provision workspaces {orch-namespace}s in advance, rather than relying on automatic provisioning. Repeat the procedure for each user.
 
 .Procedure
 
@@ -28,6 +28,7 @@ metadata:
 
 .Additional resources
 
-* xref:understanding-the-checluster-custom-resource.adoc[]
-* xref:advanced-configuration-options-for-the-che-server-component.adoc[]
+* xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
+
+* xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
 
