--- a/modules/administration-guide/pages/installing-che-on-codeready-containers.adoc
+++ b/modules/administration-guide/pages/installing-che-on-codeready-containers.adoc
@@ -1,24 +1,24 @@
 :_content-type: PROCEDURE
-:navtitle: Installing {prod-short} on CodeReady Containers
-:keywords: overview, installing-che-on-codeready-containers
+:navtitle: Installing {prod-short} on {rh-os-local}
+:keywords: overview, installing, installation, local
 :page-aliases: installation-guide:installing-che-on-codeready-containers, overview:installing-che-on-codeready-containers
 
-:parent-context-of-installing-che-on-codeready-containers: {context}
+:parent-context-of-installing-che-on-red-hat-openshift-local: {context}
 
-[id="installing-{prod-id-short}-on-codeready-containers_{context}"]
-= Installing {prod-short} on CodeReady Containers
+[id="installing-{prod-id-short}-on-red-hat-openshift-local_{context}"]
+= Installing {prod-short} on {rh-os-local}
 
-:context: installing-{prod-id-short}-on-codeready-containers
+:context: installing-{prod-id-short}-on-red-hat-openshift-local
 
-You can create a single-node OpenShift cluster for deploying a {prod-short} instance using CodeReady Containers.
+You can create a single-node OpenShift cluster for deploying a {prod-short} instance using {rh-os-local}.
 
 .Prerequisites
 
 * `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
 
-* A running instance of CodeReady Containers. See link:https://console.redhat.com/openshift/create/local[Installing CodeReady Containers].```
+* A running instance of {rh-os-local}. See link:https://console.redhat.com/openshift/create/local[Installing {rh-os-local}].```
 
-* The file path of the user's CodeReady Containers pull secret.
+* The file path of the user's {rh-os-local} pull secret.
 
 * Available memory is 12 GB or more.
 
@@ -33,20 +33,20 @@ You can create a single-node OpenShift cluster for deploying a {prod-short} inst
 $ crc delete
 ----
 
-. Configure your host machine for CodeReady Containers:
+. Configure your host machine for {rh-os-local}:
 +
 ----
 $ crc setup
 ----
 
-. Start the CodeReady Containers virtual machine with at least 12 GB of memory and 64 GB of disk space. Also, specify the path to your pull secret and take note of the password for the `kubeadmin` user displayed at the end of the CodeReady Containers initiation:
+. Start the {rh-os-local} virtual machine with at least 12 GB of memory and 64 GB of disk space. Also, specify the path to your pull secret and take note of the password for the `kubeadmin` user displayed at the end of the {rh-os-local} initiation:
 +
 [subs="+quotes"]
 ----
 $ crc start --memory 12288 --disk-size=64 --pull-secret-file __<pull-secret-file>__
 ----
 
-. Enable access to the `oc` command line interface embedded in CodeReady Containers:
+. Enable access to the `oc` command line interface embedded in {rh-os-local}:
 +
 ----
 $ eval $(crc oc-env)
@@ -79,4 +79,4 @@ $ {prod-cli} dashboard:open
 
 .Additional resources
 
-* link:https://access.redhat.com/documentation/en-us/red_hat_codeready_containers/[Product documentation for Red Hat CodeReady Containers].
+* link:https://access.redhat.com/documentation/en-us/red_hat_openshift-local/[Product documentation for {rh-os-local}].
