--- a/modules/hosted-che/partials/ref_about-hosted-che.adoc
+++ b/modules/hosted-che/partials/ref_about-hosted-che.adoc
@@ -7,19 +7,19 @@
 = About Eclipse Che hosted by Red Hat
 
 Eclipse Che hosted by Red Hat is an open source product based on link:https://www.eclipse.org/che/[Eclipse {prod-short}] that is running on link:https://www.openshift.com/products/dedicated/[OpenShift Dedicated].
-The new service is part of the link:https://developers.redhat.com/developer-sandbox[Developer Sandbox for Red Hat OpenShift] offering, and is using link:https://developers.redhat.com/products/codeready-workspaces/overview[CodeReady Workspaces], which is built upon Eclipse Che and is optimized for Red Hat OpenShift and Red Hat Linux.
+The new service is part of the link:https://developers.redhat.com/developer-sandbox[Developer Sandbox for Red Hat OpenShift] offering, and is using link:https://developers.redhat.com/products/devspaces/overview[Red Hat OpenShift Dev Spaces], which is built upon Eclipse Che and is optimized for Red Hat OpenShift and Red Hat Linux.
 
-== Differences between Eclipse Che and CodeReady Workspaces
+== Differences between Eclipse Che and Red Hat OpenShift Dev Spaces
 
-Red Hat CodeReady Workspaces is the product that is built from the Eclipse Che project. The product is normally two versions behind the project. Red Hat also provides licensing, packaging, and support, so CodeReady Workspaces is considered a more stable product than the upstream Eclipse Che project. See link:https://access.redhat.com/documentation/en-us/red_hat_codeready_workspaces/2.14/html/release_notes_and_known_issues/about-codeready-workspaces_crw[About Red Hat CodeReady Workspaces].
+Red Hat Red Hat OpenShift Dev Spaces is the product that is built from the Eclipse Che project. The product is normally two versions behind the project. Red Hat also provides licensing, packaging, and support, so Red Hat OpenShift Dev Spaces is considered a more stable product than the upstream Eclipse Che project. See link:https://access.redhat.com/documentation/en-us/red_hat_devspaces/2.14/html/release_notes_and_known_issues/about-devspaces_crw[About Red Hat Dev Spaces].
 
-NOTE: link:https://workspaces.openshift.com/[Eclipse Che hosted by Red Hat] provides both CodeReady Workspaces product-specific, as well as, Eclipse Che community devfiles on the "Get Started" tab of the User Dashboard.
+NOTE: link:https://workspaces.openshift.com/[Eclipse Che hosted by Red Hat] provides both Red Hat OpenShift Dev Spaces product-specific, as well as, Eclipse Che community devfiles on the "Get Started" tab of the User Dashboard.
 
 image::hosted-che/get-started-product-and-community-devfiles.png[]
 
 [IMPORTANT]
 ====
-Eclipse Che and Red Hat CodeReady Workspaces share all the features - all the product's functionality is available in the project and vice versa. However, not all the upstream plug-ins are available in the CodeReady Workspaces. To use an unsupported plug-in inside the CodeReady Workspaces, one must explicitly point to the raw `meta.yaml` of the plug-in from the devfile. 
+Eclipse Che and Red Hat OpenShift Dev Spaces share all the features - all the product's functionality is available in the project and vice versa. However, not all the upstream plug-ins are available in the Red Hat OpenShift Dev Spaces. To use an unsupported plug-in inside the Red Hat OpenShift Dev Spaces, one must explicitly point to the raw `meta.yaml` of the plug-in from the devfile. 
 ====
 
 [id="terms-of-service_{context}"]
