docs: clarification, 'using the OpenShift web console" rather than "using OperatorHub"
This commit is fixing leftovers and ambiguities.

CLI and OpenShift web console installation use the same Eclipse Che operator from Red Hat Ecosystem Catalog aka. OperatorHub.

Therefore its makes no sense to describe "using the OpenShift web console" as "using OperatorHub".

This unfortunate wording is a leftover from previous version, which could be installed:

* using OpenShift web console and the Eclipse Che operator from Red Hat Ecosystem Catalog aka. OperatorHub.
* using chectl, the Eclipse Che Operator, but not OperatorHub.

Moreover, the official name is Red Had Ecosysttem Catalog: use it when it makes sense.

--- a/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
@@ -10,7 +10,7 @@ This section describes how to install {prod-short} using the OpenShift web conso
 
 .Prerequisites
 
-* A web console session with administrative access on the destination OpenShift instance. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/web_console/web-console.html[Accessing the web console]
+* A web console session with administrative access on the destination OpenShift instance. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/web_console/web-console.html[Accessing the web console].
 
 .Procedure
 
