--- a/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool.adoc
+++ b/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool.adoc
@@ -28,10 +28,10 @@ This section describes how to upgrade from the previous minor version using the 
 ----
 $ {prod-cli} server:update -n {prod-namespace}
 ----
-
++
 [NOTE]
 ====
-For slow systems or internet connections, add the `--k8spodwaittimeout=1800000` flag option to the `{prod-cli} server:update` command to extend the Pod timeout period to 1800000 ms or longer.
+For slow systems or internet connections, add the `--k8spodwaittimeout=1800000` flag option to extend the Pod timeout period to 1800000 ms or longer.
 ====
 
 .Verification steps
