--- a/modules/administration-guide/partials/proc_building-a-che-theia-container-image-with-custom-branding.adoc
+++ b/modules/administration-guide/partials/proc_building-a-che-theia-container-image-with-custom-branding.adoc
@@ -19,9 +19,10 @@ This section describes how to build a Che-Theia container image with custom bran
 . In the `Dockerfile` directory, create a `branding/` sub-directory. Place the custom `product.json` file and logo images into the `branding/` directory.
 . Build the container image with Che-Theia and push the image to a container registry:
 +
+[subs="+attributes,+quotes"]
 ----
-$ docker build -t username/che-theia-codeready-workspaces:next .
-$ docker push username/che-theia-codeready-workspaces:next
+$ {docker-cli} build -t username/che-theia-codeready-workspaces:next .
+$ {docker-cli} push username/che-theia-codeready-workspaces:next
 ----
 
 
